# curfb_electrochem_model

./: .gitignore  CITATION.cff  Cargo.toml  README.md  Short_Stack_Data_Plot.asv  Short_Stack_Data_Plot.m  data.csv  output.csv  plot.py  population_specification.json
src/: data_preparation.rs  electrochem_model.rs  genetic_algorithm.rs  main.rs  plotting.rs
